# dotnet-interop

./: .gitignore  ArrayMarshal.cs  CMakeLists.txt  GCPinnedHandle.cs  GenericMarshaller.cs  HGlobal.cs  Program.cs  WStringMarshaler.cs  arrays.csproj  dotnet_interop.csproj
include/: libnative.h
script/: ArrayMarshal.cs  CMakeLists.txt  filter_access.sh  process.sh  remove_function_bodies.sh  template.cmake
src/: libnative.cpp
swig/: CMakeLists.txt  libnative.i
swig/include/: cs_class.i  debug_typemap.i  netcore.i  std_wstring.i
